fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: 'Montserrat';
+  box-sizing: border-box;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
 }
 
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: var(--bg-color-primary);
 }
 
