--- a/src/styles/MealsCards.css
+++ b/src/styles/MealsCards.css
@@ -1,68 +1,54 @@
-* {
-  box-sizing: border-box;
-}
-
-.meal-card-container {
+.recipe-card-container {
   display: flex;
+  width: 100%;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   max-width: 1120px;
+  padding: 50px 50px 106px 50px;
+  gap: 50px;
   margin-left: auto;
   margin-right: auto;
-  padding: 50px;
-  gap: 50px;
 }
 
-.meal-card img {
-  width: 300px;
-  border-radius: 10px 10px 0 0;
-}
-
-.meal-card {
+.recipe-card {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  height: 250px;
+  width: 280px;
+  height: 280px;
   color: #222;
-  margin-bottom: 20px;
   background-color: white;
   box-shadow: 0 3px 7.5px rgb(0 0 0 / 10%);
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 15px;
+  border: 1px solid rgba(0,0,0,.3);
 }
 
-.meal-card a img {
-  width: 300px;
-  height: 220px;
+.image-link {
+  width: 100%;
+  height: 75%;
 }
 
-.meal-card a {
-  text-align: center;
+.recipe-card a img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px 15px 0 0;
+  border-bottom: 1px solid rgba(0,0,0,.3);;
 }
 
-.meal-card-date {
-  position: absolute;
-  top: 9px;
-  left: 200px;
-  background-color: white;
-  padding: 5px 7px;
-  border-radius: 2px;
+
+.recipe-link {
+  width: 100%;
+  height: 25%;
+  background-color: var(--bg-color-secondary);
+  border-radius: 0px 0px 15px 15px;
+  display: flex;
+  align-items: center;
+  padding: 0 0 0 30px;
 }
 
-.meal-card-button {
-  position: absolute;
-  top: 6px;
-  left: 6px;
-  padding: 5px 7px;
-  border-radius: 2px;
-  width: 35px;
+.text-link {
+  text-decoration: none;
+  padding: 0 0 5px 0;
+  border-bottom: 1px solid var(--red);
 }
 
-.fav {
-  left: 35px;
-}
-
-@media screen and (min-width: 650px) {
-  .meal-card-container {
-  }
-}
